# mychat

./: Makefile.am  configure.in
mychat/: Makefile.am  mychat.cpp
web/: Makefile.am  MyChat.as  index.html  index.tpl  strings.en.var  strings.ru.var  var.defaults
